Fix overflow in blog posts

--- a/static/styles/components/_rich-text.scss
+++ b/static/styles/components/_rich-text.scss
@@ -34,4 +34,8 @@
     border: 1rem solid $c-highlight;
     max-width: 80%;
   }
+
+  pre {
+    overflow: auto;
+  }
 }
